--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <div id="root">
     </div>
-    <script src="/index.js"></script>
+    <script src="./actions.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
